# termina-lexer

./: LICENSE  README.md  setup.cfg
termina_lexer/: __init__.py  termina.py
