[metadata]
name = termina-lexer
version = 0.1.0
description = Pygments lexer for the Termina language
author = The Termina Project Contributors
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pygments>=2.0

[options.entry_points]
pygments.lexers =
    termina = termina_lexer.termina:TerminaLexer

